Fix "move here" button not wide enough on Safari.

--- a/app/notes/note.component.css
+++ b/app/notes/note.component.css
@@ -78,7 +78,7 @@
   margin: 0 0 0 0.25em;
 }
 button.ui-widget.pn-button-aligned.button-wide {
-  width: 8em;
+  width: 8.5em;
 }
 .button-extra-wide {
   width: 9em;
